--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
                 <!-- Navigation Buttons -->
                 <button onclick="changeMonth(-1)" class="btn waves-effect waves-light"><i class="material-icons">chevron_left</i></button>
                 <button onclick="changeMonth(1)" class="btn waves-effect waves-light"><i class="material-icons">chevron_right</i></button>
-                <button onclick="addEvent()" class="btn waves-effect waves-light green">Add Event</button>
+                <button onclick="window.location.href='event_detail.html'" class="btn waves-effect waves-light green">Add Event</button>
                 <button onclick="addTask()" class="btn waves-effect waves-light blue">Add Task</button>
 
                 <div id="calendar" class="calendar"></div>
