--- a/views/index.html
+++ b/views/index.html
@@ -113,3 +113,6 @@
             M.AutoInit(); // Initialize Materialize components
             updateCalendarView(); // Initial update of the calendar to show the current month
         });
+    </script>
+</body>
+</html>
